# python-project-lvl3

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: test_linter.yml
page_loader/: __init__.py  logger.py
page_loader/downloading/: download.py
page_loader/naming/: give_name.py
page_loader/scripts/: page_loader.py
page_loader/working_with_files/: __init__.py  download_files.py  find_files.py  find_src.py
tests/: test_page_loader.py
tests/fixtures/: bad_images.html  expected_pic.html  expected_with_link.html  page_with_link.html  pic.html
