[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["SevaErsh <erschidvs@yandex.ru>"]
packages = [
    { include = 'page_loader'},
]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
html-parser = "^0.2"
progress = "^1.6"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.2"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
